# SerialCLI-app

./: .gitignore  Cargo.toml  README.md
src/: app.rs  command.rs  communicator.rs  main.rs  shell.rs
